Fix window resize on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,7 +472,7 @@ strong {
 
 
 
-@media (max-width: 800px) {
+@media (max-width: 600px) {
   body {
     overflow-y: hidden;
   }
@@ -480,7 +480,7 @@ strong {
   #sidebar {
     min-width: 0;
     width: 100%;
-    position: fixed;
+    position: relative;
     height: auto;
     padding-top: 5px;
     padding-left: 15px;
@@ -513,6 +513,7 @@ strong {
     text-align: center;
     padding-left: 0px;
     margin-left: 0px;
+    overflow: hidden;
   }
 
   .nav-links li {
